# 53_m4_fedex

./: README.md
Main Solution - Enhanced Layering Approach/source/: CMakeLists.txt  bin_pack.h  main.cpp  packing_structures.h
Other Approaches/Dimension-Based_Layering_Algorithm/: Dimension-Based_Layering_Algorithm.py  Strip Rotation_and_Compaction_Approach.py  output.txt
Other Approaches/First Fit Approach/: CMakeLists.txt  first_fit.cpp
Other Approaches/Reinforcement Learning Approach/: CMakeLists.txt  requirements.txt
Other Approaches/Reinforcement Learning Approach/src/: CMakeLists.txt  array2d.h  container.cc  container.h  container_solver.cc  container_solver.pyi  episode_generator.cc  episode_generator.h  mcts.h  package.h  package_utils.py  policy_value_network.py  worker.py
Other Approaches/Reinforcement Learning Approach/tasks/: container_solver.cp312-win_amd64.pyd  setup.ps1  train.py
validator/: input.txt  output.txt  validate.py
visualizer/: feed.json  index.html
